force-app/main/default/objects/cycle__c/cycle__c.object-meta.xml
<CustomObject>
    <label>cycle</label>
    <nameField>
        <label>cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>