force-app/main/default/objects/cycle__c/fields/Cycle_Length__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Length__c</fullName>
    <label>Cycle_Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>